--- a/.pages.yml
+++ b/.pages.yml
@@ -1,33 +1,33 @@
-# pages.config.yml (or potentially .pages.yml with this structure)
+# .pages.yml - Configuration for Pages CMS (https://app.pagescms.org/)
+# Uses the syntax structure: media:, content: - name:, type:, path:, fields:
+
+# Define the media folder settings
 media:
-  input: public/images
-  output: /images
+  input: content/images  # Matches your project's image folder
+  output: /content/images # Matches your project's image folder
   extensions: [jpg, jpeg, png, webp, gif]
 
 content:
-  # Articles (Blog Posts)
+  # Articles Collection
   - name: articles
     label: Articles
     type: collection
-    path: src/content/articles # Note: path might differ for your structure
+    path: content/articles  # Matches your project's articles folder
     format: yaml-frontmatter
-    filename: "{slug}.md"
+    filename: "{slug}.md" # Note: This might generate predictable names based on 'title' unless CMS handles randomness differently for this format
     fields:
       - name: title
         type: string
         required: true
       - name: slug
         type: string
-        hint: "Used in URL. Lowercase, hyphenated (e.g., my-new-post)"
+        hint: "Used in filename. Lowercase, hyphenated (e.g., my-first-post)"
       - name: date
         type: date
         required: true
-      - name: excerpt
-        type: text
-        hint: "Short summary for listing pages"
       - name: author
         type: string
-      - name: cover_image
+      - name: image # Changed from 'cover_image' to match your HTML/JS expectation
         type: image
         required: false
         hint: "Featured image for the article"
@@ -36,7 +36,50 @@ content:
         field:
           type: string
       - name: body
-        type: rich-text # or markdown
+        type: markdown # Changed from 'rich-text' to 'markdown' to align with your JS parser
         required: true
 
-  # ... other collections like team, services
+  # Team Members Collection
+  - name: team
+    label: Team Members
+    type: collection
+    path: content/teams  # Matches your project's teams folder
+    format: yaml-frontmatter
+    filename: "{slug}.md" # Changed from '.yaml' to '.md' for consistency
+    fields:
+      - name: title # Changed from 'name' to 'title' to match your HTML/JS expectation
+        type: string
+        required: true
+      - name: role
+        type: string
+        required: true
+      - name: image # Changed from 'photo' to 'image' to match your HTML/JS expectation
+        type: image
+        required: false
+        hint: "Photo of the team member"
+      - name: tags
+        type: list
+        field:
+          type: string
+      - name: body # Changed from 'bio' to 'body' to match your HTML/JS expectation for markdown content
+        type: markdown # Changed from 'text' to 'markdown' to align with your JS parser
+        required: true
+
+  # Services Collection
+  - name: services
+    label: Services
+    type: collection
+    path: content/services  # Matches your project's services folder
+    format: yaml-frontmatter
+    filename: "{slug}.md" # Changed from '.yaml' to '.md' for consistency
+    fields:
+      - name: title
+        type: string
+        required: true
+      - name: image # Changed from 'icon_image' to 'image' to match your HTML/JS expectation
+        type: image
+        required: false
+        hint: "Icon or image representing the service"
+      - name: body # Changed from 'description' to 'body' to match your HTML/JS expectation for markdown content
+        type: markdown # Changed from 'text' to 'markdown' to align with your JS parser
+        required: true
