--- a/.pages.yml
+++ b/.pages.yml
@@ -1,85 +1,70 @@
-# .pages.yml - Configuration for Pages CMS (https://app.pagescms.org/)
-# Uses the syntax structure: media:, content: - name:, type:, path:, fields:
-
-# Define the media folder settings
+# .pages.yaml - Configuration for Pages CMS
 media:
-  input: content/images  # Matches your project's image folder
-  output: /content/images # Matches your project's image folder
-  extensions: [jpg, jpeg, png, webp, gif]
+  output: content/images
+  public: /content/images
 
-content:
-  # Articles Collection
+collections:
   - name: articles
     label: Articles
-    type: collection
-    path: content/articles  # Matches your project's articles folder
-    format: yaml-frontmatter
-    filename: "{slug}.md" # Note: This might generate predictable names based on 'title' unless CMS handles randomness differently for this format
+    path: content/articles
     fields:
       - name: title
+        label: Title
         type: string
         required: true
-      - name: slug
-        type: string
-        hint: "Used in filename. Lowercase, hyphenated (e.g., my-first-post)"
       - name: date
-        type: date
+        label: Date
+        type: datetime
         required: true
       - name: author
+        label: Author
         type: string
-      - name: image # Changed from 'cover_image' to match your HTML/JS expectation
+      - name: image
+        label: Featured Image
         type: image
-        required: false
-        hint: "Featured image for the article"
       - name: tags
+        label: Tags
         type: list
-        field:
-          type: string
       - name: body
-        type: markdown # Changed from 'rich-text' to 'markdown' to align with your JS parser
+        label: Body
+        type: rich-text
         required: true
 
-  # Team Members Collection
-  - name: team
+  - name: teams
     label: Team Members
-    type: collection
-    path: content/teams  # Matches your project's teams folder
-    format: yaml-frontmatter
-    filename: "{slug}.md" # Changed from '.yaml' to '.md' for consistency
+    path: content/teams
     fields:
-      - name: title # Changed from 'name' to 'title' to match your HTML/JS expectation
+      - name: title
+        label: Name
         type: string
         required: true
       - name: role
+        label: Role
         type: string
         required: true
-      - name: image # Changed from 'photo' to 'image' to match your HTML/JS expectation
+      - name: image
+        label: Photo
         type: image
-        required: false
-        hint: "Photo of the team member"
       - name: tags
+        label: Tags
         type: list
-        field:
-          type: string
-      - name: body # Changed from 'bio' to 'body' to match your HTML/JS expectation for markdown content
-        type: markdown # Changed from 'text' to 'markdown' to align with your JS parser
+      - name: body
+        label: Bio
+        type: rich-text
         required: true
 
-  # Services Collection
   - name: services
     label: Services
-    type: collection
-    path: content/services  # Matches your project's services folder
-    format: yaml-frontmatter
-    filename: "{slug}.md" # Changed from '.yaml' to '.md' for consistency
+    path: content/services
     fields:
       - name: title
+        label: Service Name
         type: string
         required: true
-      - name: image # Changed from 'icon_image' to 'image' to match your HTML/JS expectation
+      - name: image
+        label: Icon
         type: image
-        required: false
-        hint: "Icon or image representing the service"
-      - name: body # Changed from 'description' to 'body' to match your HTML/JS expectation for markdown content
-        type: markdown # Changed from 'text' to 'markdown' to align with your JS parser
+      - name: body
+        label: Description
+        type: rich-text
         required: true
