Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -1,34 +1,31 @@
-# .pages.yml - Configuration for Pages CMS (https://app.pagescms.org/)
-# Uses the syntax structure: media:, content: - name:, type:, path:, fields:
-
-# Define the media folder settings
+# .pages.yml - Configuration for Pages CMS
 media:
-  input: content/images  # Matches your project's image folder
-  output: /content/images # Matches your project's image folder
+  input: content/images
+  output: /content/images
   extensions: [jpg, jpeg, png, webp, gif]
-
 
 content:
   # Articles Collection
   - name: articles
     label: Articles
     type: collection
-    path: content/articles  # Matches your project's articles folder
+    path: content/articles
     format: yaml-frontmatter
-    filename: {slug}.md # Note: This might generate predictable names based on 'title' unless CMS handles randomness differently for this format
+    filename: {slug}.md
     fields:
       - name: title
         type: string
         required: true
       - name: slug
         type: string
+        required: true
         hint: "Used in filename. Lowercase, hyphenated (e.g., my-first-post)"
       - name: date
         type: date
         required: true
       - name: author
         type: string
-      - name: image # Changed from 'cover_image' to match your HTML/JS expectation
+      - name: image
         type: image
         required: false
         hint: "Featured image for the article"
@@ -37,24 +34,28 @@ content:
         field:
           type: string
       - name: body
-        type: markdown # Changed from 'rich-text' to 'markdown' to align with your JS parser
+        type: markdown
         required: true
 
   # Team Members Collection
   - name: team
     label: Team Members
     type: collection
-    path: content/teams  # Matches your project's teams folder
+    path: content/teams
     format: yaml-frontmatter
-    filename: "{slug}.md" # Changed from '.yaml' to '.md' for consistency
+    filename: {slug}.md
     fields:
-      - name: title # Changed from 'name' to 'title' to match your HTML/JS expectation
+      - name: title
         type: string
         required: true
+      - name: slug
+        type: string
+        required: true
+        hint: "Used in filename. Lowercase, hyphenated (e.g., john-doe)"
       - name: role
         type: string
         required: true
-      - name: image # Changed from 'photo' to 'image' to match your HTML/JS expectation
+      - name: image
         type: image
         required: false
         hint: "Photo of the team member"
@@ -62,25 +63,29 @@ content:
         type: list
         field:
           type: string
-      - name: body # Changed from 'bio' to 'body' to match your HTML/JS expectation for markdown content
-        type: markdown # Changed from 'text' to 'markdown' to align with your JS parser
+      - name: body
+        type: markdown
         required: true
 
   # Services Collection
   - name: services
     label: Services
     type: collection
-    path: content/services  # Matches your project's services folder
+    path: content/services
     format: yaml-frontmatter
-    filename: "{slug}.md" # Changed from '.yaml' to '.md' for consistency
+    filename: {slug}.md
     fields:
       - name: title
         type: string
         required: true
-      - name: image # Changed from 'icon_image' to 'image' to match your HTML/JS expectation
+      - name: slug
+        type: string
+        required: true
+        hint: "Used in filename. Lowercase, hyphenated (e.g., web-development)"
+      - name: image
         type: image
         required: false
         hint: "Icon or image representing the service"
-      - name: body # Changed from 'description' to 'body' to match your HTML/JS expectation for markdown content
-        type: markdown # Changed from 'text' to 'markdown' to align with your JS parser
+      - name: body
+        type: markdown
         required: true
